tests/negative/neg_pr1113b_match_non_sum_variant_arm.safe
package neg_pr1113b_match_non_sum_variant_arm

   function value returns integer

      match 41
         when circle (radius)
            return radius
